# blocaled

./: .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  meson.build  meson_options.txt
data/: blocaled.8  blocaled.8.in  blocaled.conf.in  hostname1.xml  hostnamed.xml  kbd-model-map  locale1.xml  meson.build  openrc-settingsd.8  openrc-settingsd.conf  org.freedesktop.hostname1.policy  org.freedesktop.hostname1.service.in  org.freedesktop.hostname1.xml  org.freedesktop.locale1.policy  org.freedesktop.locale1.service.in  org.freedesktop.locale1.xml  org.freedesktop.timedate1.policy  org.freedesktop.timedate1.service.in  org.freedesktop.timedate1.xml  timedate1.xml
data/conf.d/: blocaled  openrc-settingsd
data/init.d/: openrc-settingsd.in
doc/reference/: Makefile.am  blocaled-docs.xml  blocaled-sections.txt
src/: bus-utils.c  bus-utils.h  hostnamed.c  hostnamed.h  localed.c  localed.h  main.c  main.h  meson.build  polkitasync.c  polkitasync.h  shell-utils.c  shell-utils.h  shellparser.c  shellparser.h  timedated.c  timedated.h  utils.c  utils.h
src/copypaste/: COPYING.LGPL-2.1  hwclock.c  hwclock.h  macro.h  util.c  util.h
tests/: Makefile.am  bad-locale-read  bad-model-map  bad-read-userconf  gdbus-mock-polkit.c  keyboard-read  keyboard-read-userconf  keyboard-write  keyboard-write-no-dir  keyboard-write-no-file  locale-erase-write  locale-read  locale-read-unreadable  locale-read-userconf  locale-write  locale-write-bogus-var  locale-write-comment  locale-write-no-cr  locale-write-no-dir  locale-write-no-file  locale-write-twice  meson.build  ref-dbus.sh  ref-localed-myconf.sh  ref-localed.sh  ref-polkit.sh  test-env.sh  try-options  unref-dbus.sh  unref-localed-myconf.sh  unref-localed.sh  unref-polkit.sh  xkbd-read  xkbd-read-userconf  xkbd-write  xkbd-write-no-dir  xkbd-write-no-file
tests/scratch/: keyboard-read-result1  keyboard-read-result2  keyboard-write-result1  keyboard-write-result2.in  locale-read-result1  locale-write-result1  meson.build  org.freedesktop.locale1.service.in  test-session.xml.in  xkeyboard-read-result1  xkeyboard-read-result2
tests/scratch/system.d/: blocaled.conf  polkit-mock.conf
